--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name        = "mgraph_ai_service_base"
+name        = "mgraph_ai_service_graphs"
 version     = "v0.3.3"
 description = "MGraph-AI__Service__Base"
 authors     = ["Dinis Cruz <dinis.cruz@owasp.org>"]
